--- a/Atividade_2/package.json
+++ b/Atividade_2/package.json
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "@types/prompt-sync": "^4.2.3",
+    "@types/readline-sync": "^1.4.8"
+  }
 }
